# agent-orchestra

./: .gitignore  2025-08-22-this-session-is-being-continued-from-a-previous-co.txt  CONTRIBUTING.md  LICENSE  README.md  RELEASE_CHECKLIST.md  agents.json  direct_demo.py  mcp_config.json  mypy.ini  openai_supervisor_demo.py  pyproject.toml  quick_demo.py  run_with_tui.py  working_supervisor_mcp_demo.py
.claude/: CLAUDE.md  SUMMARY.md
.claude/agents/: open-source-code-reviewer.md
dev_files/: README.md  SUPERVISOR_AGENTS.md  SUPERVISOR_TUI_INTEGRATION_SUMMARY.md  SUPERVISOR_TUI_READY.md  complete_supervisor_demo.py  demo_file_creation.py  demo_supervisor.py  minimal_supervisor_demo.py  simple_test_workflow.py  supervisor_tui_demo.py  test_logging_workflow.py  test_simple_logging.py  test_supervisor_integration.py  test_supervisor_workflow.py  test_thinking_parser.py  website_builder_workflow.py  working_supervisor_demo.py
docs/: README.md  RELEASE_CHECKLIST.md  index.md
examples/: README.md  basic_mcp_example.py  demo.py  github_tool_search.py  hello_world.json  http_tools.yaml  orchestrator_streaming_example.py  restaurant_search.py  restaurant_search_enhanced.py  simple_graph.json  simple_working_tools.yaml  streaming_orchestrator_demo.py  test_cli_workflow.py  tools.yaml  tools_with_readiness.yaml
examples/advanced/: agent_orchestrator_demo.py  broker_config_example.py  data_analysis_orchestrator_demo.py  end_to_end_part3_demo.py  mcp_persistence_demo.py  mcp_persistence_test.py  multi_agent_example.py  orchestrator_streaming_example.py  part4_complete_demo.py  persistence_and_resume.py  polish_verification_demo.py  polished_part4_demo.py  quick_part4_test.py  real_mcp_persistence_demo.py  restaurant_orchestrator_demo.py  resume_demo.py  simple_persistence_demo.py  streaming_orchestration.py  upgrade_to_part4_example.py
examples/agents/: executor@v1.yaml  judge@v1.yaml  planner@v1.yaml  researcher@v1.yaml  restricted@v1.yaml  secure@v1.yaml  simple@v1.yaml  simple_no_manager@v1.yaml  writer@v1.yaml
examples/basic/: basic_mcp_example.py  polished_simple_demo.py  restaurant_search.py  restaurant_search_enhanced.py  simple_mcp_orchestrator_test.py  streaming_orchestrator_demo.py  working_orchestrator_demo.py
examples/graphs/: complex.json  file_processing.json  foreach.json  mcp_demo.json  self_contained_demo.json  simple.json
examples/integrations/: github_tool_search.py
examples/openai_agents/: executor@v1.yaml  planner@v1.yaml
examples/quickstart/: hello_world.py  orchestration_basics.py  restaurant_search.py  simple_workflow.py  supervisor_website_builder.py
schemas/: agents.schema.json  tools.schema.json
scripts/: migrate_jsonl_to_sqlite.py
server-jira/: package-lock.json  package.json  tsconfig.json
server-jira/src/: index.ts
server-slack/: README.md  package-lock.json  package.json  tsconfig.json
server-slack/codegen/: fetchSpec.ts  generate.ts  parseSpec.ts
server-slack/codegen/static/: slack-methods.json
server-slack/codegen/templates/: tool.hbs
server-slack/mcp-sdk/: index.js  package.json
server-slack/src/: index.ts  mcp.ts  server.ts
server-slack/src/auth/: token.ts
server-slack/src/schemas/: types.ts
server-slack/src/slack/: client.ts  pagination.ts  rateLimit.ts
server-slack/src/tools/: genericCall.ts  registry.ts
server-slack/src/transport/: http.ts  stdio.ts
server-slack/test/: smoke.spec.ts
src/agent_orchestra/: README.md  __init__.py  agents_loader.py  checkpointer.py  cli.py  cli_interactive.py  cli_py.py  events.py  graph.py  llm_factory.py  nodes.py  orchestrator.py  policy.py  tools_loader.py  workflow_loader.py
src/agent_orchestra/adapters/: __init__.py  base.py  mcp_use.py
src/agent_orchestra/logging/: __init__.py  system_logger.py
src/agent_orchestra/orchestrator/: __init__.py  agent_pool.py  call_broker.py  core.py  executors.py  executors_mcp.py  signature.py  store.py  store_factory.py  store_sqlite.py  thinking_parser.py  types.py
src/agent_orchestra/sidecar/: sidecar_agent.py
src/agent_orchestra/tui/: __init__.py  bus.py  main.py  model.py
tests/: __init__.py  conftest.py  test_adapters.py  test_agent_pool.py  test_compatibility.py  test_events.py  test_graph.py  test_persistence.py  test_policy.py  test_policy_enforcement.py  test_store_sqlite.py
typings/mcp_use/: __init__.pyi  client.pyi  config.pyi  logging.pyi  session.pyi  utils.pyi
typings/mcp_use/adapters/: __init__.pyi  base.pyi  langchain_adapter.pyi
typings/mcp_use/agents/: mcpagent.pyi  remote.pyi
typings/mcp_use/connectors/: __init__.pyi  base.pyi  http.pyi  sandbox.pyi  stdio.pyi  utils.pyi  websocket.pyi
typings/mcp_use/errors/: error_formatting.pyi
typings/mcp_use/managers/: base.pyi  server_manager.pyi
typings/mcp_use/observability/: __init__.pyi  callbacks_manager.pyi  laminar.pyi  (+1 more)
(+21 files in other folders)
