[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-orchestra"
version = "0.1.0"
description = "Production-ready multi-agent orchestration framework with enterprise features"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Agentic Orchestra Contributors"}
]
keywords = ["mcp", "ai", "agents", "telemetry", "policy", "observability", "orchestration"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "mcp-use>=0.1.0",
    "typing-extensions>=4.0.0",
    "tenacity>=8.0.0",
]
requires-python = ">=3.11"

[project.scripts]
catenas = "agent_orchestra.cli_py:app"

[project.optional-dependencies]
cli = [
    "typer>=0.12",
    "rich>=13.7",
    "langchain-openai>=0.1.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "websockets>=11.0.0",
    "urwid>=2.1.0",
]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "black>=22.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/your-username/agent-orchestra"
Repository = "https://github.com/your-username/agent-orchestra"
Issues = "https://github.com/your-username/agent-orchestra/issues"
Documentation = "https://github.com/your-username/agent-orchestra/blob/main/README.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
addopts = "-q"
markers = [
    "e2e: marks tests as end-to-end integration tests (deselect with '-m \"not e2e\")"
]

[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true